Adihu : FAQ bouncing bug fixed along with alignment for the 1st question on accordion
git-svn-id: https://10.24.239.14:5511/svn/Engage@699 f308e16d-57e9-4fa7-a310-9aba3baf408f

--- a/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-business-skin.css
+++ b/Portals/trunk/EngagePortal/EngagePortal/public_html/oracle/webcenter/portalapp/skins/card-portal-business-skin.css
@@ -289,6 +289,10 @@ font-weight: bold !important;
     padding-left: 35px;
 }
 
+.af_panelAccordion_header.p_AFDisclosed.p_AFFlow, .af_panelAccordion_header-subsequent.p_AFDisclosed.p_AFFlow {
+padding-bottom: 10px !important;
+}
+
 /*.af_panelAccordion_header.p_AFDisclosed .af_panelAccordion_header-disclose,
 .af_panelAccordion_header.p_AFDisclosed .af_panelAccordion_header-title,
 .af_panelAccordion_header.p_AFDisclosed .af_panelAccordion_header-toolbar{
@@ -383,6 +387,7 @@ border-bottom: 1px solid rgb(221, 220, 220) !important;
     font-size: 15px;
     font-family: Lucida Sans,Georgia,Serif !important;
     font-weight:bold;
+    cursor: pointer;
 }
 
 .af_panelAccordion_header-subsequent.p_AFDisclosed .af_panelAccordion_header-title,
@@ -976,6 +981,10 @@ font-style:normal;
     margin-left:-3px !important;
     margin-right:-15px !important;
 }
+
+.af_panelAccordion_header .af_panelAccordion_header-start, .af_panelAccordion_header .af_panelAccordion_header-toolbar, .af_panelAccordion_header .af_panelAccordion_header-title, .af_panelAccordion_header .af_panelAccordion_header-end{
+    width:1 !important;
+}
 .af_selectOneRadio_item-text, .af_chooseDate_ampm-item-text{
     vertical-align:20% !important;
 }
@@ -1050,6 +1059,10 @@ font-style:normal;
     margin-right:-15px !important;
     margin-left:-2px !important;
 } 
+
+.af_panelAccordion_header .af_panelAccordion_header-start, .af_panelAccordion_header .af_panelAccordion_header-toolbar, .af_panelAccordion_header .af_panelAccordion_header-title, .af_panelAccordion_header .af_panelAccordion_header-end{
+    width:1 !important;
+}
 .af_selectOneRadio_item-text, .af_chooseDate_ampm-item-text{
     vertical-align:0% !important;
 }
@@ -1222,6 +1235,17 @@ font-weight: bold ;
 font-style:normal;
 text-decoration: none !important;
 cursor:auto;
+}
+
+.faqlink
+{
+font-family : Lucida Sans,Georgia,Serif !important;
+font-size: 13px;
+color: #524e4f !important;
+font-weight: normal !important;
+text-decoration: underline !important;
+font-style:italic !important;
+cursor: auto;    
 }
 
 
@@ -1442,6 +1466,7 @@ background-position: -30px -106px ;
 	height: 18px;
         padding-right: 8px;
         outline-color: transparent !important;
+        cursor: pointer;
 }
 .af_panelAccordion_disclosed-icon-style{
     background: url("/images/faq/close.png") no-repeat !important;
@@ -1450,6 +1475,7 @@ background-position: -30px -106px ;
 	height: 18px;
         padding-right: 8px;
 outline-color: transparent !important;
+cursor: pointer;
 }
 
 
